# TweeterClone

./: .env  .env.test  .gitlab-ci.yml  Dockerfile  README.md  conftest.py  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.yml  fill_bd.py  good_response.py  mypy.ini  nginx.conf  pyproject.toml  pytest.ini  test_app.py
app/: app_factory.py  config.py  crud.py  dependency.py  main.py  schemas.py
app/fill_db/: fill_db.py
app/routes/: tweet.py  user.py
app/schemas/: __init__.py  general.py  get_all_tweets.py  tweet.py  user.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  fill_bd.py  follow.py  like.py  media.py  tweet.py  user.py
tests/: conftest.py  core_test.py  fill_bd.py  good_response.py  test_app.py  test_media.py  test_tweet.py
