[project]
name = "python_advanced_diploma"
version = "0.1.0"
description = ""
authors = [
    {name = "Stasya",email = "ap1050167@gmail.com"}
]
requires-python = "3.12.3"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "uvicorn (>=0.28.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
]

[tool.poetry.dev-dependencies]
black = "^23.3.0"
click = "^8.1.3"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
flake8-pie = "^0.15.0"
isort = "^5.9.3"
mypy = "^1.14.1"
pytest = "^8.3.4"
httpx = "^0.28.1"
pytest-asyncio = "^0.25.3"
pipx = "^1.7.1"



[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
